Parse/MiniJava.java
/* MiniJava.java */
/* Generated By:JavaCC: Do not edit this line. MiniJava.java */
package Parse;
import java.util.LinkedList;
public class MiniJava implements MiniJavaConstants {

/********************/
/* MiniJava Grammar */
/********************/

// Goal 	::= 	MainClass ( ClassDeclaration | ThreadDeclaration )* <EOF>
  final public Absyn.Program Goal() throws ParseException {LinkedList<Absyn.ClassDecl> cl = new LinkedList<Absyn.ClassDecl>();
    MainClassDeclaration(cl);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 6:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      if (jj_2_1(2147483647)) {
        ClassDeclaration(cl);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 6:{
          ThreadDeclaration(cl);
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(0);
{if ("" != null) return new Absyn.Program(cl);}
    throw new Error("Missing return statement in function");
}

// MainClass 	::= 	"class" Identifier "{" "public" "static" "void" "main" "(" "String" "[" "]" Identifier ")" "{" Statement "}" "}"
  final public Absyn.ClassDecl MainClassDeclaration(LinkedList<Absyn.ClassDecl> cl) throws ParseException {Absyn.ClassDecl  cd;
 Absyn.Stmt stmt;
 Absyn.VarDecl var;
 Token name, arg;
 LinkedList<Absyn.MethodDecl> methods = new LinkedList<Absyn.MethodDecl>();
 LinkedList<Absyn.Formal> formals     = new LinkedList<Absyn.Formal>();
 LinkedList<Absyn.VarDecl> locals     = new LinkedList<Absyn.VarDecl>();
 LinkedList<Absyn.Stmt> stmts         = new LinkedList<Absyn.Stmt>();
    jj_consume_token(6);
    name = jj_consume_token(ID);
    jj_consume_token(35);
    jj_consume_token(11);
    jj_consume_token(12);
    jj_consume_token(13);
    jj_consume_token(17);
    jj_consume_token(33);
    jj_consume_token(18);
    jj_consume_token(37);
    jj_consume_token(38);
    arg = jj_consume_token(ID);
    jj_consume_token(34);
formals.add(new Absyn.Formal(
   new Absyn.ArrayType(
    new Absyn.IdentifierType("String")),
     arg.toString()));
    jj_consume_token(35);
    label_2:
    while (true) {
      if (jj_2_2(2147483647)) {
        ;
      } else {
        break label_2;
      }
      var = VarDeclaration();
locals.add(var);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 8:
      case 9:
      case 19:
      case 20:
      case 33:
      case 35:
      case DECIMAL:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    jj_consume_token(36);
    jj_consume_token(36);
methods.add(new Absyn.MethodDecl(null,
               false,
               "main",
               formals,
               locals,
               stmts,
        new Absyn.IntegerLiteral(0)));
  cd = new Absyn.ClassDecl(
   name.toString(),
   null,
   locals,
   methods);
  cl.add(cd);
  {if ("" != null) return cd;}
    throw new Error("Missing return statement in function");
}

// ClassDeclaration 	::= 	"class" Identifier ( "extends" Identifier )? "{" ( VarDeclaration )* ( MethodDeclaration )* "}"
  final public Absyn.ClassDecl ClassDeclaration(LinkedList<Absyn.ClassDecl> cl) throws ParseException {Absyn.ClassDecl  cd;
 Absyn.MethodDecl md;
 Absyn.VoidDecl   vd;
 Absyn.VarDecl    fd;
 Token name = null, parent = null;
 String parStr = null;
 LinkedList<Absyn.VarDecl> fields     = new LinkedList<Absyn.VarDecl>();
 LinkedList<Absyn.MethodDecl> methods = new LinkedList<Absyn.MethodDecl>();
    jj_consume_token(6);
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 69:{
      jj_consume_token(69);
      parent = jj_consume_token(ID);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(35);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 13:
      case 14:
      case 15:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      fd = VarDeclaration();
fields.add(fd);
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 11:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      md = MethodDeclaration();
methods.add(md);
    }
    jj_consume_token(36);
cd = new Absyn.ClassDecl(name.toString(), parent != null ? parent.toString() : null, fields, methods);
        cl.add(cd);
        {if ("" != null) return cd;}
    throw new Error("Missing return statement in function");
}

// ThreadDeclaration 	::= 	"class" Identifier "extends" "Thread" "{" ( VarDeclaration )* ( MethodDeclaration | RunDeclaration )* "}"
  final public Absyn.ThreadDecl ThreadDeclaration(LinkedList<Absyn.ClassDecl> cl) throws ParseException {Absyn.ThreadDecl cd;
 Absyn.MethodDecl md;
 Absyn.VoidDecl   vd;
 Absyn.VarDecl    fd;
 Token name = null;
 String parStr = null;
 LinkedList<Absyn.VarDecl> fields     = new LinkedList<Absyn.VarDecl>();
 LinkedList<Absyn.MethodDecl> methods = new LinkedList<Absyn.MethodDecl>();
    jj_consume_token(6);
    name = jj_consume_token(ID);
    jj_consume_token(69);
    jj_consume_token(70);
    jj_consume_token(35);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 11:
      case 13:
      case 14:
      case 15:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_6;
      }
      if (jj_2_3(2147483647)) {
        fd = FieldDeclaration();
fields.add(fd);
      } else if (jj_2_4(2)) {
        vd = VoidDeclaration();
methods.add(vd);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 11:{
          md = MethodDeclaration();
methods.add(md);
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(36);
cd = new Absyn.ThreadDecl(name.toString(),
    fields, methods);
  cl.add(cd);
  {if ("" != null) return cd;}
    throw new Error("Missing return statement in function");
}

// VarDeclaration 	::= 	Type Identifier ( = Expression )? ";"
  final public Absyn.VarDecl VarDeclaration() throws ParseException {Absyn.Type type = null;
 Token      name = null;
 Absyn.Expr init = null;
    type = Type();
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 31:{
      jj_consume_token(31);
      init = Expression();
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    jj_consume_token(39);
{if ("" != null) return new Absyn.VarDecl(type, name.toString(), init);}
    throw new Error("Missing return statement in function");
}

// MethodDeclaration 	::= 	"public" ( "synchronized" )? Type Identifier "(" ( Type Identifier ( "," Type Identifier )* )? ")" "{" ( VarDeclaration )* ( Statement )* "return" Expression ";" "}"
  final public Absyn.MethodDecl MethodDeclaration() throws ParseException {Absyn.Type returnType, paramType;
 Token methodName, paramName;
//	Absyn.Formal formal;
 Absyn.VarDecl var;
 Absyn.Stmt stmt;
 Absyn.Expr expr;
 boolean sync = false;
 LinkedList<Absyn.Formal> formals  = new LinkedList<Absyn.Formal>();
 LinkedList<Absyn.VarDecl> locals  = new LinkedList<Absyn.VarDecl>();
 LinkedList<Absyn.Stmt> stmts      = new LinkedList<Absyn.Stmt>();
    jj_consume_token(11);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 71:{
      jj_consume_token(71);
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    returnType = Type();
    methodName = jj_consume_token(ID);
    jj_consume_token(33);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 13:
    case 14:
    case 15:
    case ID:{
      paramType = Type();
      paramName = jj_consume_token(ID);
formals.add(new Absyn.Formal(paramType, paramName.toString()));
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 40:{
          ;
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          break label_7;
        }
        jj_consume_token(40);
        paramType = Type();
        paramName = jj_consume_token(ID);
formals.add(new Absyn.Formal(paramType, paramName.toString()));
      }
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    jj_consume_token(34);
    jj_consume_token(35);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 13:
      case 14:
      case 15:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_8;
      }
      var = VarDeclaration();
locals.add(var);
    }
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 8:
      case 9:
      case 19:
      case 20:
      case 33:
      case 35:
      case DECIMAL:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        break label_9;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 10:{
      jj_consume_token(10);
      expr = Expression();
      jj_consume_token(39);
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
if((expr = Expression())  == null){
  expr = new Absyn.NullExpr();
 }
    jj_consume_token(36);
{if ("" != null) return new Absyn.MethodDecl(returnType, sync ,methodName.toString(), formals, locals, stmts, expr);}
    throw new Error("Missing return statement in function");
}

// VoidDeclaration 	::= 	"public" "void" Identifier "(" ( Type Identifier ( "," Type Identifier )* )? ")" "{" ( VarDeclaration )* ( Statement )* "}"
  final public Absyn.VoidDecl VoidDeclaration() throws ParseException {Token methodName;
 Absyn.VarDecl var;
 Absyn.Stmt stmt;
 LinkedList<Absyn.VarDecl> locals  = new LinkedList<Absyn.VarDecl>();
 LinkedList<Absyn.Stmt> stmts      = new LinkedList<Absyn.Stmt>();
    jj_consume_token(11);
    jj_consume_token(13);
    methodName = jj_consume_token(ID);
    jj_consume_token(33);
    jj_consume_token(34);
    jj_consume_token(35);
    label_10:
    while (true) {
      if (jj_2_5(2147483647)) {
        ;
      } else {
        break label_10;
      }
      var = VarDeclaration();
locals.add(var);
    }
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 8:
      case 9:
      case 19:
      case 20:
      case 33:
      case 35:
      case DECIMAL:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_11;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    jj_consume_token(36);
{if ("" != null) return new Absyn.VoidDecl(methodName.toString(), locals, stmts);}
    throw new Error("Missing return statement in function");
}

// FieldDeclaration 	::= 	Type Identifier ";"
  final public Absyn.VarDecl FieldDeclaration() throws ParseException {Absyn.Type type;
 Token name;
    type = Type();
    name = jj_consume_token(ID);
    jj_consume_token(39);
{if ("" != null) return new Absyn.VarDecl(type, name.toString(), new Absyn.IntegerLiteral(0));}
    throw new Error("Missing return statement in function");
}

  final public Absyn.Stmt Statement() throws ParseException {Absyn.Stmt s;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 35:{
      s = Block();
      break;
      }
    case 8:{
      s = IfStatement();
      break;
      }
    case 9:{
      s = WhileStatement();
      break;
      }
    case 19:
    case 20:
    case 33:
    case DECIMAL:
    case ID:{
      s = AssignmentStatement();
{if ("" != null) return s;}
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public Absyn.Stmt AssignmentStatement() throws ParseException {Absyn.Expr lhs, rhs;
    lhs = Expression();
    //lhs should call assignableExpr.
     rhs = Expression();
{if ("" != null) return new Absyn.AssignStmt(lhs,rhs);}
    throw new Error("Missing return statement in function");
}

  final public Absyn.Stmt IfStatement() throws ParseException {Absyn.Expr cond;
    Absyn.Stmt thenStmt, elseStmt = null;
    jj_consume_token(8);
    jj_consume_token(33);
    cond = Expression();
    jj_consume_token(34);
    thenStmt = Statement();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 7:{
      jj_consume_token(7);
      elseStmt = Statement();
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      ;
    }
{if ("" != null) return new Absyn.IfStmt(cond, thenStmt, elseStmt);}
    throw new Error("Missing return statement in function");
}

  final public Absyn.Type Type() throws ParseException {Absyn.Type t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 15:{
      jj_consume_token(15);
t = new Absyn.IntegerType(); {if ("" != null) return t;}
      break;
      }
    case 14:{
      jj_consume_token(14);
t = new Absyn.BooleanType(); {if ("" != null) return t;}
      break;
      }
    case 13:{
      jj_consume_token(13);
t = null;
      break;
      }
    case ID:{
      jj_consume_token(ID);
t = new Absyn.IdentifierType(token.image); {if ("" != null) return t;}
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public Absyn.Expr PrimaryExpression() throws ParseException {Absyn.Expr e;
 Token id;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 19:
    case 20:
    case DECIMAL:{
      e = Literal();
      break;
      }
    case ID:{
      id = jj_consume_token(ID);
e = new Absyn.IdentifierExpr(id.image);
      break;
      }
    case 33:{
      jj_consume_token(33);
      e = Expression();
      jj_consume_token(34);
{if ("" != null) return e;}
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public Absyn.Expr Expression() throws ParseException {Absyn.Expr e, right;
    Token op;
    e = PrimaryExpression();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 72:{
        ;
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        break label_12;
      }
      op = BinaryOperator();
      right = PrimaryExpression();
e = new Absyn.BinOpExpr(e, right);
    }
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
}

  final public Absyn.Expr Literal() throws ParseException {Absyn.Expr e;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DECIMAL:{
      e = IntegerLiteral();
      break;
      }
    case 19:{
      jj_consume_token(19);
e = new Absyn.TrueExpr();
      break;
      }
    case 20:{
      jj_consume_token(20);
e = new Absyn.FalseExpr();
{if ("" != null) return e;}  // Ensure you return the constructed expression

      break;
      }
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public Absyn.Expr IntegerLiteral() throws ParseException {Token decimalToken;  // Capture the token for decimal literals

    decimalToken = jj_consume_token(DECIMAL);
{if ("" != null) return new Absyn.IntegerLiteral(Integer.parseInt(decimalToken.image));}
    throw new Error("Missing return statement in function");
}

  final public Absyn.Stmt Block() throws ParseException {LinkedList<Absyn.Stmt> stmts = new LinkedList<Absyn.Stmt>();
    Absyn.Stmt stmt;
    jj_consume_token(35);
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 8:
      case 9:
      case 19:
      case 20:
      case 33:
      case 35:
      case DECIMAL:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        break label_13;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    jj_consume_token(36);
{if ("" != null) return new Absyn.BlockStmt(stmts);}
    throw new Error("Missing return statement in function");
}
